@@ -976,7 +976,7 @@ possibleExtends <- function(class1, class2, ClassDef1, ClassDef2)
 {
     if(.identC(class1[[1L]], class2) || .identC(class2, "ANY"))
         return(TRUE)
-    ext <- TRUE # may become a list of extends definitions
+    ## ext <- TRUE # may become a list of extends definitions
     if(is.null(ClassDef1)) # class1 not defined
         return(FALSE)
     ## else
@@ -991,13 +991,13 @@ possibleExtends <- function(class1, class2, ClassDef1, ClassDef2)
             if(!.identC(class(ClassDef2), "classRepresentation") &&
                isClassUnion(ClassDef2))
                 ## a simple TRUE iff class1 or one of its superclasses belongs to the union
-		            i <- any(c(class1, nm1) %in% names(ext))
+                i <- any(c(class1, nm1) %in% names(ext))
             else {
                 ## class1 could be multiple classes here.
                 ## I think we want to know if any extend
                 i <- match(class1, names(ext))
                 ii <- i[!is.na(i)]
-                i <- if(length(ii))  ii[1L] else i[1L]
+                i <- if(length(ii)) ii[1L] else i[1L]
             }
         }
     }
@@ -2044,18 +2044,30 @@ assign("#HAS_DUPLICATE_CLASS_NAMES", FALSE, envir = .classTable)
 ## in the assumption this is a classRepresentation or subclass of that.
 ## In principle, this could replace the checks on class(name) in getClassDef
 ## and new(), which don't work for subclasses of classRepresentation anyway.
-.getClassFromCache <- function(name, where) {
+.getClassFromCache <- function(name, where, package = packageSlot(name),
+                               resolve.confl = "first", resolve.msg = TRUE) {
 	value <- .Call(C_R_getClassFromCache, name, .classTable)
-	if(is.list(value)) { ## multiple classes with this name
-	    pkg <- packageSlot(name)
-	    if(is.null(pkg))
-		pkg <- if(is.character(where)) where else getPackageName(where, FALSE) # may be ""
+	if(is.list(value)) { ## multiple classes with this name -- choose at most one
+	    if(is.null(package)) package <-
+                if(is.character(where)) where else getPackageName(where, FALSE) # may be ""
 	    pkgs <- names(value)
-	    i <- match(pkg, pkgs, 0L)
-	    if(i == 0L) ## try 'methods':
+	    i <- match(package, pkgs, 0L)
+	    if(i == 0L && package != "methods") ## try 'methods':
 		i <- match("methods", pkgs, 0L)
-	    if(i > 0L) value[[i]]
-            else NULL
+	    if(i > 0L)
+                value[[i]]
+	    else { ## still NULL -- but we *do* want to return one of the class definitions!
+		switch(resolve.confl,
+		       "none" = NULL,
+		       "first" = {
+			   if(resolve.msg)
+			       message(gettextf(
+				"Found more than one class \"%s\" in cache; using the first, from namespace '%s'",
+				name, pkgs[1]), domain=NA)
+			   value[[1]]
+		       },
+		       "all" = value) # return all, a list
+	    }
 	}
 	else #either a class definition or NULL
 	    value
