@@ -1,12 +1,12 @@
 Package: exNSS4
-Title: Example with NameSpace and S4 Methods and Classes
+Title: Example with S4 Methods and Classes
 Type: Package
 Depends: methods
-Version: 1.0
-Date: 2008-07-28
+Version: 1.1
+Date: 2015-08-02
 Author: Anonymous R-core
 Maintainer: R Core <R-core@almost.r-project.org>
-Description: Example package with a namespace and S4 methods and classes;
+Description: Example package with S4 methods and classes;
  used for regression testing the correct working of tools::codoc(), undoc()
  etc, but also S4 in connection with other packages.
 License: GPL (>= 2)
